<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navExpense"
        android:icon="@drawable/ic_bottom_wallet"
        android:title="@string/menu_transactions" />
    <item
        android:id="@+id/holder"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/navBudget"
        android:icon="@drawable/ic_bottom_budget"
        android:title="@string/menu_budgets" />
    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/ic_bottom_setting"
        android:title="@string/menu_settings" />

</menu>