<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.setting.FragmentSetting"
    android:background="?attr/background_color">
    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tbSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar">
        <RelativeLayout
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/text_color"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>
    <RelativeLayout
        android:id="@+id/layoutCategory"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tbSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivCategory"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_category"/>
        <TextView
            android:layout_toEndOf="@+id/ivCategory"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_category"
            android:textSize="18dp"
            android:textColor="?attr/text_color"
            android:textStyle="bold" />
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next1"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutWallet"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/layoutCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivWallet"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bottom_wallet"/>
        <TextView
            android:layout_toEndOf="@+id/ivWallet"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_wallet"
            android:textSize="18sp"
            android:textColor="?attr/text_color"
            android:textStyle="bold" />
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next1"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutInterface"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/layoutWallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivInterface"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_interface"/>
        <TextView
            android:layout_toEndOf="@+id/ivInterface"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_interface"
            android:textSize="18sp"
            android:textColor="?attr/text_color"
            android:textStyle="bold" />
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next1"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutLanguage"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/layoutInterface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivLanguage"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_language"/>
        <TextView
            android:layout_toEndOf="@+id/ivLanguage"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_language"
            android:textSize="18sp"
            android:textColor="?attr/text_color"
            android:textStyle="bold" />
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next1"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutNotification"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/layoutLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivNotification"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification"/>
        <TextView
            android:layout_toEndOf="@+id/ivNotification"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_notification"
            android:textSize="18sp"
            android:textColor="?attr/text_color"

            android:textStyle="bold" />
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next1"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutExcel"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/layoutNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivExcel"
            android:layout_alignParentStart="true"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_excel"
            app:tint="?attr/text_color" />
        <TextView
            android:layout_toEndOf="@+id/ivExcel"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_export_excel"
            android:textSize="18sp"
            android:textColor="?attr/text_color"
            android:textStyle="bold" />
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next1"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutCSV"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/layoutExcel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivCSV"
            android:layout_alignParentStart="true"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_csv"
            app:tint="?attr/text_color"/>
        <TextView
            android:layout_toEndOf="@+id/ivCSV"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_export_csv"
            android:textSize="18sp"
            android:textColor="?attr/text_color"
            android:textStyle="bold" />
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next1"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layoutPassword"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/layoutCSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivPassword"
            android:layout_alignParentStart="true"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_password"/>
        <TextView
            android:layout_toEndOf="@+id/ivPassword"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_password"
            android:textSize="18sp"
            android:textColor="?attr/text_color"
            android:textStyle="bold" />
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next1"/>
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>