<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.MaterialToolbar

        android:id="@+id/tbCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="24dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"/>

            <TextView
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_wallet_title"
                android:textColor="?attr/text_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/layoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbCategory">
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tilWalletName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_category"
            android:layout_marginEnd="25dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWalletName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:hint="@string/item_wallet_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWalletMoney"
            app:layout_constraintTop_toBottomOf="@id/tilWalletName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_money"
            android:layout_marginEnd="25dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWalletMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:inputType="number"
                android:hint="@string/add_wallet_init_amount"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tilWalletMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/add_wallet_choose_image"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/title_color"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSave"
        android:layout_below="@id/layoutText"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp">

        <ImageView
            android:id="@+id/ivChooseImage"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/wallet_cash" />

        <TextView
            android:id="@+id/tvChooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivChooseImage"
            android:layout_centerHorizontal="true"
            android:text="@string/add_wallet_choose_image" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/elWallet"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@id/tvChooseImage"
            app:el_duration="100"
            app:el_expanded="false">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWallet"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_edittext"
                android:padding="15dp" />
        </net.cachapa.expandablelayout.ExpandableLayout>
    </RelativeLayout>


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textColor="?attr/text_color"
        android:layout_marginStart="100dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>