<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color">

    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tbExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar">
        <RelativeLayout
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"/>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/text_color"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tbExpense">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/tvMoney"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/background_edittext"
                    android:inputType="number"
                    android:maxLength="14"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/button_cancel"
                    android:textColorHint="@color/button_cancel"
                    android:hint="@string/add_transaction_money"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tvMoneyUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:text="VNĐ" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlWallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_edittext"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:minHeight="55dp"
                android:paddingEnd="10dp">

                <ImageView
                    android:id="@+id/ivWallet"
                    android:layout_width="46dp"
                    android:layout_height="42dp"
                    android:src="@drawable/cat_clipboard" />

                <TextView
                    android:id="@+id/tvWalletName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/ivWallet"
                    android:text="@string/add_transaction_wallet"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWalletMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvWalletName"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/ivWallet" />

                <TextView
                    android:id="@+id/tvMoneyExist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvWalletName"
                    android:layout_toEndOf="@id/tvWalletMoney"
                    android:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlCategory"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_edittext"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <ImageView
                    android:id="@+id/ivCategoryImage"
                    android:layout_width="42dp"
                    android:layout_height="36dp"
                    android:src="@drawable/cat_clipboard" />

                <TextView
                    android:id="@+id/tvCategoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/ivCategoryImage"
                    android:text="@string/add_trans_category_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCategoryType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvCategoryName"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/ivCategoryImage"
                    android:text="@string/add_trans_category_type" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etExpenseNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ic_note_icon"
                android:drawablePadding="15dp"
                android:hint="@string/add_trans_note"
                android:padding="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />

            <TextView
                android:id="@+id/tvExpenseDate"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/ic_calendar1"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="01/07/1994" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/button_success"
        android:text="@string/save"
        android:textColor="?attr/text_color"
        android:textAllCaps="false" />
</RelativeLayout>